avoid tools overlapping with buttons

--- a/editor.less
+++ b/editor.less
@@ -180,6 +180,7 @@ body editor{
 		border: 1px solid #ddd;
 		box-sizing: border-box;
 		border-bottom: 0;
+        border-right: 52px solid #eee;
 		&.inline{
 			position: absolute;
 			top: 0;
